successfully used overflow: hidden; to stop the portfolio links from expanding outside of the allocated area

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,18 @@ body {
     font-size: 30px;
 }
 
+.mainPageNavBarSocialMediaButton {
+    padding: 0px 25px 0px 0px;
+    color:  rgb(2, 15, 31);
+    text-decoration: none;
+    transition: 0.25s;
+}
+
+.mainPageNavBarSocialMediaButton:hover {
+    color:  rgb(162, 62, 255);
+    transform: scale(1.1);
+}
+
 /* Hero Cover Section ////////////////////////////// */
 /* Hero Cover Stars //////////////////////////////// */
 .heroCoverSection {
@@ -257,12 +269,18 @@ body {
     overflow: hidden;
 }
 
+.portfolioLinksElementContainer{
+    width: 48%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .developerContainer {
     background-image: url("/images/aBuiDevDeveloperSymbol.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 48%;
+    width: 100%;
     height: 100%;
     transition: 1s;
 }
@@ -272,7 +290,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 48%;
+    width: 100%;
     height: 100%;
     transition: 1s;
 }
